# libra

./: .buckconfig  .buckignore  .env.test.example  .gitattributes  .gitignore  .libraignore  A-7.md  AGENTS.md  BUCK  BUILD.bazel  CHANGELOG.md  CLAUDE.md  COMMAND_INTEGRATION_CONTRACT_OPERATION_LOG.md  COMPATIBILITY-FRAMEWORK-DESIGN-SUMMARY.md  COMPATIBILITY-FRAMEWORK.md  COMPATIBILITY.md  COMPATIBILITY_ANALYSIS.md  COMPATIBILITY_IMPROVED.md  COMPATIBILITY_PROGRESS.md  COMPLETION_GUIDE.md  Cargo.toml  FINAL_STATUS_20260613.md  GEMINI.md  IMPLEMENTATION_ROADMAP.md  ISSUE_191_REVIEW.md  LICENSE  README.md  REMAINING_WORK.md  SESSION_SUMMARY_20260613.md  TEST_CONTRACT_ FOR_OPERATION_LAYER.md  WORK_COMPLETED.md  buckal.snap  buckal.toml  build.rs  dev.md  install.sh  libra.db  nohup.out  rev-p1-fix.patch  rustfmt.toml  (+2 more)
.cargo/: config.toml
.codex/: AGENTS.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: pre-task.md  r2cn.md
.github/workflows/: base.yml  claude-review.yml  code-ui-sse-soak-nightly.yml  codeql.yml  gemini-review.yml  live-compat.yml  model-generation-nightly.yml  release.yml
bellatrix/: Cargo.toml
benches/: ai_runtime_baseline.rs
common/src/: config.rs
data/compatibility/: status.toml
docs/: ai-versioning-analysis.md  archive_testing.md  cli-ux-improvement-plan.md  contributing.md  demo-script.md  error-codes.md  sandbox-seccomp.md  tests.md
docs/agent/: agent-overview-zh.md  agent-workflow.md  agent.md  ai-object-model-reference.md  intent-spec.md  intentspec_high_assurance.json  intentspec_typical.json  libra-worktree-architecture.md  mcp-upgrade-report.md  memory.md  provider-capability-update-guide.md  web-api.md
docs/ai/: INTENTSPEC.md  agent.md  intent-spec.md  intentspec_high_assurance.json  intentspec_high_assurance.yaml  intentspec_minimal.json  intentspec_minimal.yaml  intentspec_typical.json  intentspec_typical.yaml  object-model-reference.md  object-model.md  workflow.md
docs/automation/: local-tui-control.md
docs/commands/: README.md  add.md  agent.md  archive.md  automation.md  bisect.md  blame.md  branch.md  cache.md  cat-file.md  check-attr.md  check-ignore.md  checkout.md  cherry-pick.md  clean.md  clone.md  cloud.md  code-control.md  code.md  commit.md  config.md  db.md  describe.md  diff-files.md  diff-index.md  diff-tree.md  diff.md  fetch.md  for-each-ref.md  format-patch.md  fsck.md  gc.md  graph.md  grep.md  hash-object.md  hooks.md  index-pack.md  init.md  lfs.md  log.md  (+40 more)
docs/development/: account.md  agent-trace.md  agent.md  (+17 more)
examples/: hello_world.rs  multi_agent.toml
gemini/: Cargo.toml
libra/: Cargo.toml
scripts/: BUCK  check_compat_matrix.sh  check_docs_consistency.sh  check_integration_plan_consistency.sh  check_web_out_clean.sh
sql/: sqlite_20240331_init.sql  sqlite_20260309_init.sql  sqlite_20260415_ai_runtime_contract.sql  turso_init.sql
src/: cli.rs  common_utils.rs  diff_engine.rs  git_protocol.rs  lfs_structs.rs  lib.rs  main.rs
target-codex-review/: .rustc_info.json
template/: pre-commit.ps1  seccomp-default.json
test-repo/: .libraignore
tests/: INDEX.md  agent_capture_migration_test.rs  ai_agent_baseline_test.rs  ai_agent_test.rs  ai_approval_ttl_test.rs  ai_automation_test.rs  ai_capability_package_test.rs  ai_chat_agent_test.rs  ai_classifier_test.rs  ai_code_ui_headless_test.rs  ai_code_ui_projection_test.rs  ai_code_ui_wire_test.rs  ai_command_safety_test.rs  ai_compaction_filter_test.rs  ai_compaction_handoff_e2e_test.rs  ai_concurrency_lock_test.rs  ai_context_budget_test.rs  ai_context_compaction_prune_test.rs  ai_context_frame_test.rs  ai_context_handoff_test.rs  ai_dag_tool_loop_test.rs  ai_dagrs_081_spike_test.rs  ai_dynamic_prompt_test.rs  ai_file_undo_test.rs  ai_goal_completion_gate_test.rs  ai_goal_flag_off_regression_test.rs  ai_goal_resume_test.rs  ai_goal_state_test.rs  ai_goal_supervisor_test.rs  ai_goal_verifier_test.rs  ai_hardening_contract_test.rs  ai_json_repair_test.rs  ai_libra_vcs_safety_test.rs  ai_memory_anchor_test.rs  ai_mock_provider_test.rs  ai_multi_agent_e2e_test.rs  ai_ollama_live_gate_test.rs  ai_projection_resolver_test.rs  ai_provider_context_overflow_compact_loop_test.rs  ai_provider_error_taxonomy_test.rs  (+76 more)
toolchains/: BUCK
tools/: compat-status-view.py
tools/integration-runner/: Cargo.toml  README.md
tools/integration-runner/src/: cleanup.rs  cli.rs  main.rs  manifest.rs  plan.rs  registry.rs  support.rs
tools/integration-runner/src/runner/: context.rs  ctx_external.rs  ctx_libra.rs  dispatch.rs  live.rs  mod.rs  normal.rs  types.rs  util.rs
tools/integration-runner/src/scenarios/: archive_smoke.rs  branch_switch_checkout.rs  clean_rm_mv_lfs_basic.rs  clone_fetch_pull_local.rs  commit_status_log.rs  config_basic_kv.rs  config_get_default_and_patterns.rs  config_git_compat_mode.rs  config_import_path_edit.rs  config_key_generation.rs  config_list_variants.rs  config_scopes.rs  config_set_input_and_encryption.rs  config_unset_compat_flags.rs  cross_cutting_flags.rs  fetch_depth_local.rs  gc_smoke.rs  grep_blame_describe_shortlog.rs  init_bare_and_shared.rs  init_basic.rs  init_branch_and_format_options.rs  init_directory_and_quiet.rs  init_from_git_repository.rs  init_template.rs  init_vault.rs  live_github_create_push_clone_fetch.rs  ls_tree_smoke.rs  merge_conflict_continue.rs  merge_rebase_cherry_revert_smoke.rs  mod.rs  notes_smoke.rs  object_readback.rs  object_readback_rev_list.rs  object_readback_rev_list_cherry.rs  object_readback_rev_list_children.rs  object_readback_rev_list_filters.rs  object_readback_rev_list_output.rs  object_readback_show_ref.rs  open_smoke.rs  push_local_file_remote_rejected.rs  (+10 more)
web/: README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
worker/: .dev.vars.example  .gitignore  README.md  core.jsx  env.d.ts  eslint.config.mjs  mock-data.js  next.config.ts  open-next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.miniflare.config.ts  wrangler.jsonc
(+1353 files in other folders)
