[package]
name = "libra"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
uuid = { version = "1.20.0", features = ["v4", "v7"] }
git-internal = "0.5.0"
anyhow = "1.0.100"
byte-unit = "5.2.0"
byteorder = "1.5.0"
bytes = "1.11.0"
object_store = { version = "0.12.4", features = ["aws", "azure", "gcp", "http"] }
async-trait = "0.1.86"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
flate2 = "1.1.5"  # add features = ["zlib"] if slow
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.4.0"
ignore = "0.4.25"
indicatif = "0.18.3"
lazy_static = "1.5.0"
lru-mem = "0.3.0"
once_cell = "1.21.3"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = [
    "stream",
    "json"
]}
ring = "0.17.14"
rpassword = "7.4.0"
scopeguard = "1.2.0"
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
similar = "2.7.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "rt",
    "macros",
    "process"
]}
tokio-util = { version = "0.7.17", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
walkdir = "2.5.0"
wax = "0.6.0"
diffs = "0.5.1"
path-absolutize = "3.1.1"
infer = "0.19.0"
pathdiff = "0.2.3"
crc32fast = "1.5.0"
dirs = "5.0.1"
dagrs = "0.6.0"
rig-core = { version = "0.30.0", features = ["rmcp"] }
rmcp = { version = "0.13", features = [
    "macros",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session"
] }
hyper-util = { version = "0.1.18", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["bracketed-paste", "event-stream"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
futures-core = "0.3"

# Diff parsing
diffy = "0.4"

# Markdown rendering
pulldown-cmark = "0.12"

# Unicode handling
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies] # only on Unix
pager = "0.16.1"

[dev-dependencies]
tempfile = "3.23.0"
serial_test = "3.2.0"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "rt",
    "macros",
    "process"
]}
testcontainers = { version = "0.25.2", features = [
    "http_wait",
    "reusable-containers",
] }
reqwest = { version = "0.12.24", features = ["blocking"] }
assert_cmd = "2.1.2"
