[package]
name = "libra"
version = "0.1.14"
edition = "2024"

[features]
default        = []
test-network   = []   # L2: tests requiring outbound network but no secrets
test-live-ai   = []   # L3: tests calling real LLM APIs
test-live-cloud = []  # L3: tests hitting real D1/R2 endpoints

[dependencies]
uuid = { version = "1.22.0", features = ["v4", "v7"] }
git-internal = "0.7.3"
anyhow = "1.0.102"
byte-unit = "5.2.0"
byteorder = "1.5.0"
bytes = "1.11.1"
object_store = { version = "0.13.1", features = ["aws", "azure", "gcp", "http"] }
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
flate2 = "1.1.9"  # add features = ["zlib"] if slow
futures = "0.3.32"
futures-util = "0.3.32"
hex = "0.4.3"
http = "1.4.0"
ignore = "0.4.25"
indicatif = "0.18.4"
lazy_static = "1.5.0"
lru-mem = "0.3.0"
once_cell = "1.21.4"
openssl = { version = "0.10.76", features = ["vendored"] }
regex = "1.12.3"
reqwest = { version = "0.12.8", default-features = false, features = [
    "stream",
    "json",
    "rustls-tls"
]}
ring = "0.17.14"
rpassword = "7.4.0"
scopeguard = "1.2.0"
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
similar = "2.7.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
    "rt-multi-thread",
    "rt",
    "macros",
    "process"
]}
tokio-util = { version = "0.7.18", features = ["io"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
walkdir = "2.5.0"
wax = "0.7.0"
diffs = "0.5.1"
path-absolutize = "3.1.1"
infer = "0.19.0"
pathdiff = "0.2.3"
crc32fast = "1.5.0"
dirs = "6.0.0"
dagrs = "0.6.0"
rig-core = { version = "0.32.0", default-features = false, features = ["rmcp", "reqwest-rustls"] }
rmcp = { version = "1.2.0", features = [
    "macros",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "transport-io"
] }
hyper-util = { version = "0.1.20", features = ["full"] }
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
rust-embed = { version = "8.11.0", features = ["mime-guess"] }
mime_guess = "2.0.5"
tempfile = "3.27.0"

# TUI
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["bracketed-paste", "event-stream"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
async-stream = "0.3.6"
futures-core = "0.3.32"

# Diff parsing
diffy = "0.4.2"
shlex = "1.3.0"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"

# Markdown rendering
pulldown-cmark = "0.13.1"

# Unicode handling
unicode-width = "0.2.2"
libvault = { version = "0.2.2", features = ["storage_sqlite"] }
base64 = "0.22.1"

[target.'cfg(unix)'.dependencies] # only on Unix
pager = "0.16.1"

[dev-dependencies]
serial_test = { version = "3.4.0", default-features = false, features = ["async"] }
tokio = { version = "1.50.0", features = [
    "rt-multi-thread",
    "rt",
    "macros",
    "process"
]}
testcontainers = { version = "0.27.1", features = [
    "http_wait",
    "reusable-containers",
] }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
assert_cmd = "2.2.0"
pgp = "0.19.0"
gag = "1.0.0"
